[package]
name = "svg-iconify"
version = "0.1.0"
edition = "2021"
license-file="LICENSE"
repository="https://github.com/TommyGymer/svg-iconify/"
keywords = ["svg", "png", "cli", "tools"]
categories = ["command-line-utilities"]
readme = "README.md"
description = "A CLI for converting SVG's to PNG of specified size"
exclude = []

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
color-eyre = "0.6.3"
resvg = "0.43.0"
